cmake_minimum_required(VERSION 3.15)
project(examLiMP C)

set(CMAKE_C_STANDARD 99)

add_executable(4 Exam/4.c)
add_executable(5 Exam/5.c)
add_executable(6 Exam/6.c)
add_executable(7 Exam/7.c)
add_executable(8 Exam/8.c)
add_executable(9 Exam/9.c)
add_executable(10 Exam/10.c)
add_executable(11 Exam/11.c)
add_executable(12 Exam/12.c)
add_executable(13 Exam/13.c)
add_executable(14 Exam/14.c)
add_executable(15 Exam/15.c)
add_executable(16 Exam/16.c)
add_executable(17 Exam/17.c)
add_executable(18 Exam/18.c)
add_executable(19 Exam/19.c)
add_executable(20 Exam/20.c)
add_executable(21 Exam/21.c)
add_executable(22 Exam/22.c)
add_executable(23 Exam/23.c)
add_executable(24 Exam/24.c)
add_executable(25 Exam/25.c)
add_executable(26 Exam/26.c)
add_executable(27 Exam/27.c)
add_executable(28 Exam/28.c)
add_executable(29 Exam/29.c)
add_executable(30 Exam/30.c)
add_executable(31 Exam/31.c)
add_executable(32 Exam/32.c)
add_executable(33 Exam/33.c)
add_executable(34 Exam/34.c)
add_executable(35 Exam/35.c)
add_executable(36 Exam/36.c)
add_executable(37 Exam/37.c)
add_executable(38 Exam/38.c)
add_executable(39 Exam/39.c)
add_executable(40 Exam/40.c)
add_executable(41 Exam/41.c)
add_executable(42 Exam/42.c)
add_executable(43 Exam/43.c)
add_executable(44 Exam/44.c)

